Attempt to fix hero section resizing on mobile when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ nav>button {
     min-height: calc(90dvh);
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
-    background-size: cover;
+    background-size: 100% 100%;
     background-attachment: scroll;
     padding-top: 120px;
 }
